Fix item overflow wrap

--- a/themes/default/site.css
+++ b/themes/default/site.css
@@ -35,13 +35,13 @@ body { margin: 0 0 65px 0; background-color: #f8f8f8; }
 .header .navigation .tab a:hover { color: #666666; }
 .header .navigation .tab a.active { color: #1a1a1a; }
 .item { display: table; width: 100%; box-sizing: border-box; max-width: 640px !important; padding: 15px 20px 22px 20px; margin: 0 auto 15px auto; border-radius: 3px; background-clip: border-box; border: 1px solid rgba(0, 0, 0, .09); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .04); color: #333333; background-color: #ffffff; }
-.item .logo { overflow: hidden; float: left; top-margin: 5px; margin-right: 30px; }
+.item .logo {  float: left; top-margin: 5px; margin-right: 30px; }
 .item .border { position: relative; border-radius: 3px; box-sizing: border-box; box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1); }
 .item .border:after { content: ''; border-radius: 3px; border: 1px solid rgba(0, 0, 0, .1); position: absolute; left: 0; right: 0; top: 0; bottom: 0; }
 .item .border img { border-radius: 3px; background-clip: border-box; }
 .item a, .item a:visited, .item a:link, .item a:active, .item a:hover { color: inherit; text-decoration: none; }
 .item h1 { display: inline; font-family: "Merriweather Sans", "Open Sans", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif; font-weight: bold; font-size: 26px; line-height: 1.32; letter-spacing: -0.06em; margin: 0 0 8px -1.9375px; }
-.item .content { font-family: "Merriweather", Georgia, Cambria, "Times New Roman", Times, serif; font-weight: 300; font-size: 16px; line-height: 1.69; word-break: break-word; word-wrap: break-word; letter-spacing: -0.009em; }
+.item .content { overflow: hidden; font-family: "Merriweather", Georgia, Cambria, "Times New Roman", Times, serif; font-weight: 300; font-size: 16px; line-height: 1.69; word-break: break-word; word-wrap: break-word; letter-spacing: -0.009em; }
 .item .content p { margin: 8px 0 8px 0; }
 .item .content p a { background-size: 2px 2px; background-position: 0 19px; background-repeat: repeat-x; background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.6) 50%); }
 @media only screen and (min-device-pixel-ratio:2), only screen and (min-resolution:2dppx), only screen and (-webkit-min-device-pixel-ratio:2) {
